--- a/demo/circle-grayscale/index.html
+++ b/demo/circle-grayscale/index.html
@@ -9,9 +9,9 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/1.3.1/less.min.js" type="text/javascript"></script>
 </head>
 <body>
-<div class="circle" style="background-image: url(../_assets/img/robot.jpg)"> </div>
-<div class="circle" style="background-image: url(../_assets/img/mural.jpg)"> </div>
-<div class="circle" style="background-image: url(../_assets/img/bridge.jpg)"> </div>
-<div class="circle" style="background-image: url(../_assets/img/flower.jpg)"> </div>
+<div class="circle" style="background-image: url(https://raw.github.com/commons/less/master/demo/_assets/img/robot.jpg)"> </div>
+<div class="circle" style="background-image: url(https://raw.github.com/commons/less/master/demo/_assets/img/mural.jpg)"> </div>
+<div class="circle" style="background-image: url(https://raw.github.com/commons/less/master/demo/_assets/img/bridge.jpg)"> </div>
+<div class="circle" style="background-image: url(https://raw.github.com/commons/less/master/demo/_assets/img/flower.jpg)"> </div>
 </body>
 </html>
