--- a/demo/circle-transition/index.html
+++ b/demo/circle-transition/index.html
@@ -9,25 +9,25 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/1.3.1/less.min.js" type="text/javascript"></script>
 </head>
 <body>
-<div class="circle" style="background-image: url(../_assets/img/robot.jpg)">
+<div class="circle" style="background-image: url(https://raw.github.com/commons/less/master/demo/_assets/img/robot.jpg)">
   <div class="overlay">
     <h5>Lorem ipsum</h5>
     <p>Mlkshk cardigan pork belly, forage put a bird on it whatever salvia photo booth gentrify.</p>
   </div>
 </div>
-<div class="circle" style="background-image: url(../_assets/img/mural.jpg)">
+<div class="circle" style="background-image: url(https://raw.github.com/commons/less/master/demo/_assets/img/mural.jpg)">
   <div class="overlay">
     <h5>Lorem ipsum</h5>
     <p>Direct trade put a bird on it hoodie odd future squid helvetica brunch.</p>
   </div>
 </div>
-<div class="circle" style="background-image: url(../_assets/img/bridge.jpg)">
+<div class="circle" style="background-image: url(https://raw.github.com/commons/less/master/demo/_assets/img/bridge.jpg)">
   <div class="overlay">
     <h5>Lorem ipsum</h5>
     <p>Etsy ethical kogi mumblecore, 8-bit wayfarers carles twee irony bespoke</p>
   </div>
 </div>
-<div class="circle" style="background-image: url(../_assets/img/flower.jpg)">
+<div class="circle" style="background-image: url(https://raw.github.com/commons/less/master/demo/_assets/img/flower.jpg)">
   <div class="overlay">
     <h5>Lorem ipsum</h5>
     <p>Authentic shoreditch cliche locavore whatever.</p>
