adding index of demos

--- a/demo/index.html
+++ b/demo/index.html
@@ -13,34 +13,31 @@
 
 <body>
 
-<div class="clearfix">
-<ul class="nav arrows">
-<li class="left"></li>
-<li class="right"></li>
-<li class="up"></li>
-<li class="down"></li>
+<h1>Demos</h1>
+
+<ul class="nav">
+
+
+<li>Animation<ul><a href="animation/rotate/index.html">Rotate</a></li></ul></li>
+
+
+<li><a href="arrows/index.html">Arrows</a></li>
+
+<li><a href="bubble/index.html">Bubble</a></li>
+
+<li><a href="buttons/index.html">Buttons</a></li>
+
+<li><a href="circle-grayscale/index.html">Circle Grayscale</a></li>
+
+<li><a href="circle-transition/index.html">Circle Transition</a></li>
+
+<li><a href="filters/index.html">Filters</a></li>
+
+<li><a href="ribbons/index.html">Ribbons</a></li>
+
 </ul>
-</div>
 
-<div style="clear:both">
 
-<div class="circle" style="background-image: url(img/robot.jpg)">
-<div class="overlay"><h5>Kitten face</h5><p>This is a cute kitten</p></div>
-</div>
-
-<div class="circle" style="background-image: url(img/mural.jpg)">
-<div class="overlay"><h5>Kitten face</h5><p>This is a cute kitten</p></div>
-</div>
-
-<div class="circle" style="background-image: url(img/bridge.jpg)">
-<div class="overlay"><h5>Kitten face</h5><p>This is a cute kitten</p></div>
-</div>
-
-<div class="circle" style="background-image: url(img/flower.jpg)">
-<div class="overlay"><h5>Kitten face</h5><p>This is a cute kitten</p></div>
-</div>
-
-</div>
 
 
 </body>
