--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>Demo Index</title>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600|Open+Sans+Condensed:300,700' rel='stylesheet' type='text/css'>
 <link type="text/css" href="https://raw.github.com/commons/common.css/master/build/common.css" rel="stylesheet">
 <link type="text/css" href="index.less" media="screen" rel="stylesheet/less">
