editing demo files

--- a/demo/shapes/arrows/index.html
+++ b/demo/shapes/arrows/index.html
@@ -14,14 +14,19 @@
 </head>
 
 <body>
+<h1>Arrows</h1>
 
 <div class="clearfix">
-<ul class="nav arrows">
-<li class="left"></li>
-<li class="right"></li>
-<li class="up"></li>
-<li class="down"></li>
-</ul>
+
+
+<div><p class="left"></p><pre>.arrow-left(20px, black);</pre></div>
+
+<div><p class="right"></p><pre>.arrow-right(20px, black);</pre></div>
+
+<div><p class="up"></p><pre>.arrow-up(20px, black);</pre></div>
+
+<div><p class="down"></p><pre>.arrow-down(20px, black);</pre></div>
+
 </div>
 
 
