--- a/demo/index.html
+++ b/demo/index.html
@@ -7,38 +7,36 @@
 <link type="text/css" href="https://raw.github.com/commons/common.css/master/build/common.css" rel="stylesheet">
 <link type="text/css" href="index.less" media="screen" rel="stylesheet/less">
 <script src="http://cdnjs.cloudflare.com/ajax/libs/less.js/1.3.1/less.min.js" type="text/javascript"></script>
-
-
 </head>
 
 <body>
-
 <h1>Demos</h1>
-
 <ul class="nav">
-
-
-<li>Animation<ul><a href="animation/rotate/index.html">Rotate</a></li></ul></li>
-
-
-<li><a href="arrows/index.html">Arrows</a></li>
-
-<li><a href="bubble/index.html">Bubble</a></li>
-
-<li><a href="buttons/index.html">Buttons</a></li>
-
-<li><a href="circle-grayscale/index.html">Circle Grayscale</a></li>
-
-<li><a href="circle-transition/index.html">Circle Transition</a></li>
-
-<li><a href="filters/index.html">Filters</a></li>
-
-<li><a href="ribbons/index.html">Ribbons</a></li>
-
+  <li>Animation
+    <ul>
+      <li><a href="animation/rotate/index.html">Rotate</a></li>
+      <li><a href="circle-grayscale/index.html">Circle Grayscale</a></li>
+  	<li><a href="circle-transition/index.html">Circle Transition</a></li>
+    </ul>
+  </li>
+  
+  <li><a href="buttons/index.html">Buttons</a></li>
+  <li><a href="filters/index.html">Filters</a></li>
+  
+  <li><a href="gradients/index.html">Gradients</a></li>
+  
+  <li><a href="ribbons/index.html">Ribbons</a></li>
+  
+  <li> Shapes
+    <ul>
+      <li><a href="shapes/arrows/index.html">Arrows</a></li>
+      <li><a href="shapes/bubble/index.html">Bubble</a></li>
+      <li><a href="shapes/circle/index.html">Circle</a></li>
+      
+    </ul>
+  </li>
+  
+  
 </ul>
-
-
-
-
 </body>
 </html>
