#3 fixing gradient for firefox

--- a/demo/gradients/index.html
+++ b/demo/gradients/index.html
@@ -11,13 +11,13 @@
 <body>
 <div class="linear"><h1>Linear gradient</h1>
 <p><pre>
-	div.linear {
-		height:100%;
-		width:50%;
-		float:left;
-		text-align:left;
-		.linear-gradient(left bottom, right top, #fff, #000);
-	}
+  div.linear {
+	height:100%;
+	width:50%;
+	float:left;
+	text-align:left;
+	.linear-gradient(left bottom, left top, #930, #cf0);
+  }
 </pre></p>
 
 
@@ -27,25 +27,25 @@
 
 <div class="radial"><h1>Radial gradient</h1>
 <p><pre>
-	div.radial {
-		height:100%;
-		width:50%;
-		float:left;
-		text-align:left;
-		.radial-gradient(50%, 50%, circle, cover, #ffffff, 0%, #000000, 100%);
-	}
+  div.radial {
+	height:100%;
+	width:50%;
+	float:left;
+	text-align:left;
+	.radial-gradient(50%, 50%, circle, cover, #00f, 30%, #fff, 100%);
+  }
 </pre></p>
 </div>
 
 <div class="radial-3color"><h1>3 Color Radial gradient</h1>
 <p><pre>
-	div.radial-3color {
-		height:100%;
-		width:50%;
-		float:left;
-		text-align:left;
-		.radial-gradient-3color(#fff 10%, #999 30%, #000 90%);
-	}
+  div.radial-3color {
+	height:100%;
+	width:50%;
+	float:left;
+	text-align:left;
+	.radial-gradient-3color(#9ff 10%, #0f0 30%, #ff0 90%);
+  }
 </pre></p>
 </div>
 
