adding radial sphere gradient

--- a/demo/gradients/index.html
+++ b/demo/gradients/index.html
@@ -44,14 +44,22 @@
 	width:50%;
 	float:left;
 	text-align:left;
-	.radial-gradient-3color(#9ff 10%, #0f0 30%, #ff0 90%);
+	.radial-gradient-3color(circle, #9ff 10%, #0f0 30%, #ff0 90%);
   }
 </pre></p>
 </div>
 
-
-
-
-
+<div class="sphere"><h1>Spherical gradient</h1>
+<p><pre>
+  div.sphere {
+	height:100%;
+	width:50%;  
+	border-radius: 50%;
+	float:left;
+	text-align:left;
+	.radial-gradient-sphere(#9f0);
+  }
+</pre></p>
+</div>
 </body>
 </html>
